feat: challenge 1 - fix about-me

--- a/romanconverter/src/main/resources/templates/view-about-me.html
+++ b/romanconverter/src/main/resources/templates/view-about-me.html
@@ -17,12 +17,22 @@
         <div class="container">
             <div class="wrapper">
                 <h3>
-                    Nama: Clement Samuel Marly
+                    Nama: <span th:text="${nama}"></span>
                 </h3>
             </div>
             <div class="wrapper">
                 <h3>
-                    NPM: 2206082114
+                    NPM: <span th:text="${npm}"></span>
+                </h3>
+            </div>
+            <div class="wrapper">
+                <h3>
+                    Usia: <span th:text="${usia}"></span>
+                </h3>
+            </div>
+            <div class="wrapper">
+                <h3>
+                    Kelas: <span th:text="${kelas}"></span>
                 </h3>
             </div>
         </div>
