Revert "feat: challenge 1 - fix about-me"
This reverts commit 1d0eb1fcac029b84f7b2cec7f0c955671894e874.

--- a/romanconverter/src/main/resources/templates/view-about-me.html
+++ b/romanconverter/src/main/resources/templates/view-about-me.html
@@ -17,22 +17,12 @@
         <div class="container">
             <div class="wrapper">
                 <h3>
-                    Nama: <span th:text="${nama}"></span>
+                    Nama: Clement Samuel Marly
                 </h3>
             </div>
             <div class="wrapper">
                 <h3>
-                    NPM: <span th:text="${npm}"></span>
-                </h3>
-            </div>
-            <div class="wrapper">
-                <h3>
-                    Usia: <span th:text="${usia}"></span>
-                </h3>
-            </div>
-            <div class="wrapper">
-                <h3>
-                    Kelas: <span th:text="${kelas}"></span>
+                    NPM: 2206082114
                 </h3>
             </div>
         </div>
