--- a/manpromanpro/src/main/resources/templates/view-all-proyek.html
+++ b/manpromanpro/src/main/resources/templates/view-all-proyek.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://thymeleaf.org">
- 
+
 <head>
-  <meta charset="UTF-8">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
-  <title>Home</title>
+    <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
+    <title>Home</title>
 </head>
- 
+
 <body>
     <div class="container">
         <div class="text-center pt-5">
@@ -21,18 +21,24 @@
                         <div class="card-body">
                             <h5 th:text="${proyek.nama}" class="card-title"></h5>
                             <h6 th:text="'Developed by : ' + ${proyek.developer}" class="card-subtitle mb-2"></h6>
-                            <a type="button" class="btn btn-md btn-primary" 
-                               th:href="@{/proyek?id={idProyek}(idProyek=${proyek.id})}">Detail</a>
+                            <a type="button" class="btn btn-md btn-primary"
+                                th:href="@{/proyek?id={idProyek}(idProyek=${proyek.id})}">Detail</a>
+                            <a type="button" class="btn btn-md btn-primary" style="background-color: #FFB833; color: black; border: none;"
+                                th:href="@{/proyek/{id}/update(id=${proyek.id})}">Ubah</a>
+                            <a type="button" class="btn btn-md btn-primary" style="background-color: #FF3933; color: white; border: none;"
+                                th:href="@{/proyek?id={idProyek}(idProyek=${proyek.id})}">Hapus</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="text-center m-3">
-            <a type="button" class="btn btn-primary m-2" href="/proyek/add">Tambah Proyek</a>
-            <a type="button" class="btn btn-md btn-primary" href="/">Home</a>
-        </div>
+    </div>
+    </div>
+    <div class="text-center m-3">
+        <a type="button" class="btn btn-primary m-2" href="/proyek/add">Tambah Proyek</a>
+        <a type="button" class="btn btn-md btn-primary" href="/">Home</a>
+    </div>
     </div>
 </body>
- 
+
 </html>
