feat: tutorial 2 - add delete proyek feature

--- a/manpromanpro/src/main/resources/templates/view-all-proyek.html
+++ b/manpromanpro/src/main/resources/templates/view-all-proyek.html
@@ -26,7 +26,7 @@
                             <a type="button" class="btn btn-md btn-primary" style="background-color: #FFB833; color: black; border: none;"
                                 th:href="@{/proyek/{id}/update(id=${proyek.id})}">Ubah</a>
                             <a type="button" class="btn btn-md btn-primary" style="background-color: #FF3933; color: white; border: none;"
-                                th:href="@{/proyek?id={idProyek}(idProyek=${proyek.id})}">Hapus</a>
+                                th:href="@{/proyek/{id}/delete(id=${proyek.id})}">Hapus</a>
                         </div>
                     </div>
                 </div>
