--- a/manpromanpro/src/main/resources/templates/form-add-proyek.html
+++ b/manpromanpro/src/main/resources/templates/form-add-proyek.html
@@ -32,7 +32,11 @@
                         <br/><br/>
 
                         Status: <br/>
-                        <input required class="form-control" type="text" th:field="*{status}" />
+                        <select class="form-control" th:field="*{status}" required>
+                            <option value="">-- Select Status --</option>
+                            <option value="On Going">On Going</option>
+                            <option value="Finished">Finished</option>
+                        </select>
                         <br/><br/>
 
                         Developer: <br/>
