--- a/manpromanpro/src/main/resources/templates/form-update-proyek.html
+++ b/manpromanpro/src/main/resources/templates/form-update-proyek.html
@@ -30,13 +30,17 @@
                     <br /><br />
 
                     Status: <br />
-                    <input class="form-control" type="text" th:field="*{status}" />
+                    <select class="form-control" th:field="*{status}" required>
+                        <option value="">-- Select Status --</option>
+                        <option value="On Going">On Going</option>
+                        <option value="Finished">Finished</option>
+                    </select>
                     <br /><br />
 
                     Developer: <br />
                     <input class="form-control" type="text" th:field="*{developer}" />
                     <br /><br />
-                    
+
                     <button type="submit" class="btn btn-primary">Submit</button>
                     <a class="btn btn-primary" href="/">Home</a>
                 </form>
