--- a/manpromanpro/src/main/resources/templates/viewall-proyek.html
+++ b/manpromanpro/src/main/resources/templates/viewall-proyek.html
@@ -4,44 +4,70 @@
 <head>
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
+          integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"/>
     <title>Daftar Proyek</title>
+    <style>
+        .centered-form-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+    </style>
 </head>
 
 <body>
-    <div class="container">
-        <div class="text-center my-4">
-            <h2>Daftar Proyek</h2>
+<div class="container">
+    <div class="text-center my-4">
+        <h2>Daftar Proyek</h2>
+    </div>
+    <div class="row justify-content-center mb-4">
+        <div class="col-md-8 centered-form-container">
+            <form th:action="@{/proyek/viewall}" method="get" class="d-flex">
+                <input type="text" class="form-control me-2" name="nama" placeholder="Cari nama proyek..." th:value="${nama}" />
+                <select class="form-select me-2" name="status">
+                    <option value="" th:selected="${status == null or status == ''}">Semua Status</option>
+                    <option value="STARTED" th:selected="${status == 'STARTED'}">STARTED</option>
+                    <option value="ONGOING" th:selected="${status == 'ONGOING'}">ONGOING</option>
+                    <option value="FINISHED" th:selected="${status == 'FINISHED'}">FINISHED</option>
+                </select>
+                <button type="submit" class="btn btn-primary"><i class="bi bi-search"></i></button>
+            </form>
         </div>
-        <div th:each="proyek: ${listProyek}">
-            <div class="row justify-content-center m-2">
-                <div class="card" style="width: 40rem;">
-                    <div class="card-body">
-                        <h5 th:text="${proyek.nama}" class="card-title row my-3"></h5>
-                        <h6 th:if="${proyek.developer != null}" th:text="'Nama Developer : '+${proyek.developer.nama}" class="card-subtitle row my-3"></h6>
-                        <h6 th:if="${proyek.developer == null}" th:text="'Nama Developer : -" class="card-subtitle row my-3"></h6>
-                        <h6 th:text="'Status : ' + ${proyek.status}" class="card-subtitle row my-3"></h6>
-                        <div class="row my-3">
-                            <a type="button" class="btn btn-md btn-primary col-sm-2 mx-2"
-                               th:href="@{/proyek/{idProyek}(idProyek=${proyek.id})}">Detail
-                            </a>
-                            <a type="button" class="btn btn-md btn-warning col-sm-2 mx-2"
-                               th:href="@{/proyek/{idProyek}/update(idProyek=${proyek.id})}"> Update
-                            </a>
-                            <a type="button" class="btn btn-md btn-danger col-sm-2 mx-2"
-                               th:href="@{/proyek/{idProyek}/delete(idProyek=${proyek.id})}"> Delete
-                            </a>
-                        </div>
+    </div>
+    <div th:each="proyek: ${listProyek}">
+        <div class="row justify-content-center m-2">
+            <div class="card" style="width: 40rem;">
+                <div class="card-body">
+                    <h5 class="card-title" th:text="${proyek.nama}">Nama Proyek</h5>
+                    <p class="card-text">
+                        <strong>Nama Developer :</strong>
+                        <span th:text="${proyek.developer != null ? proyek.developer.nama : 'Tidak ada developer'}"></span>
+                    </p>
+                    <p class="card-text">
+                        <strong>Status :</strong>
+                        <span th:text="${proyek.status}">Status Proyek</span>
+                    </p>
+                    <div class="d-flex justify-content-end">
+                        <a type="button" class="btn btn-md btn-primary me-2"
+                           th:href="@{/proyek/{idProyek}(idProyek=${proyek.id})}">Detail
+                        </a>
+                        <a type="button" class="btn btn-md btn-warning me-2"
+                           th:href="@{/proyek/{idProyek}/update(idProyek=${proyek.id})}"> Update
+                        </a>
+                        <a type="button" class="btn btn-md btn-danger"
+                           th:href="@{/proyek/{idProyek}/delete(idProyek=${proyek.id})}"> Delete
+                        </a>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="text-center m-3">
-            <a type="button" class="btn btn-primary m-2" href="/proyek/add">Tambah Proyek</a>
-            <a type="button" class="btn btn-md btn-primary" href="/">Home</a>
-        </div>
     </div>
+    <div class="text-center m-3">
+        <a type="button" class="btn btn-primary m-2" href="/proyek/add">Tambah Proyek</a>
+        <a type="button" class="btn btn-md btn-primary" href="/">Home</a>
+    </div>
+</div>
 </body>
 
 </html>
