--- a/manpromanpro/src/main/resources/templates/viewall-proyek.html
+++ b/manpromanpro/src/main/resources/templates/viewall-proyek.html
@@ -34,6 +34,12 @@
                 <div class="card" style="width: 40rem;">
                     <div class="card-body">
                         <h5 class="card-title" th:text="${proyek.nama}">Nama Proyek</h5>
+                        <div class="row" th:if="${proyek.listPekerja.size} != 0">
+                            <h6 class="card-subtitle row my-3">Pekerja: </h6>
+                            <ul th:each="pekerja : ${proyek.listPekerja}" class="d-flex flex-row">
+                                <li th:text="${pekerja.nama}"></li>
+                            </ul>
+                        </div>
                         <p class="card-text">
                             <strong>Nama Developer :</strong>
                             <span
