--- a/manpromanpro/src/main/resources/templates/viewall-pekerja.html
+++ b/manpromanpro/src/main/resources/templates/viewall-pekerja.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://thymeleaf.org">
- 
+
 <head>
     <meta charset="UTF-8">
     <object th:include="~{fragments/common :: js}" th:remove="tag "></object>
     <object th:include="~{fragments/common :: css}" th:remove="tag "></object>
     <title>View Pekerja</title>
 </head>
- 
+
 <body>
     <nav th:replace="~{fragments/navbar :: navbar}"></nav>
     <div class="container">
         <div class="text-center my-4">
             <h2>Daftar Pekerja</h2>
         </div>
+        <form th:action="@{/pekerja/delete}" method="post">
             <table class="table">
+                <div class= "alert alert-warning" role="alert">
+                    Catatan: Pekerja yang tidak dapat terpilih sudah memiliki relasi dengan sebuah proyek
+                </div>
                 <thead>
                     <tr>
                         <th scope="col">Nama</th>
@@ -29,14 +33,20 @@
                         <td th:text="${pekerja.usia}"></td>
                         <td th:text="${pekerja.pekerjaan}"></td>
                         <td th:text="${pekerja.biografi}"></td>
+                        <td>
+                            <input type="checkbox" class="form_check_input" id="flexCheckDefault"
+                                th:field="*{listPekerja}" th:value="${pekerja.id}">
+                        </td>
                     </tr>
                 </tbody>
             </table>
             <div class="text-center m-3">
+                <button type="submit" class="btn btn-primary">Delete Selected</button>
                 <a type="button" class="btn btn-primary m-2" href="/pekerja/add">Tambah Pekerja</a>
                 <a type="button" class="btn btn-md btn-primary" href="/">Home</a>
             </div>
+        </form>
     </div>
 </body>
- 
+
 </html>
