--- a/manpromanpro/src/main/resources/templates/fragments/navbar.html
+++ b/manpromanpro/src/main/resources/templates/fragments/navbar.html
@@ -18,6 +18,15 @@
           <li class="nav-item">
             <a class="nav-link" th:href="@{/}">Beranda</a>
           </li>
+          <li class="nav-item"></li>
+            <a class="nav-link" th:href="@{/pekerja/viewall}">Pekerja</a>
+          </li>
+          <li class="nav-item"></li>
+            <a class="nav-link" th:href="@{/developer/viewall}">Developer</a>
+          </li>
+          <li class="nav-item"></li>
+            <a class="nav-link" th:href="@{/proyek/viewall}">Proyek</a>
+          </li>
         </ul>
       </div>
     </div>
