--- a/manpromanpro/src/main/resources/templates/home.html
+++ b/manpromanpro/src/main/resources/templates/home.html
@@ -22,6 +22,7 @@
       <div class="col">
         <a type="button" class="btn btn-primary m-2" href="/proyek/add">Tambah Proyek</a>
         <a type="button" class="btn btn-primary m-2" href="/proyek/viewall">Lihat Semua Proyek</a>
+        <a type="button" class="btn btn-primary m-2" href="/proyek/datatable">Lihat Datatable Proyek</a>
       </div>
     </div>
     <div class="row">
