--- a/manpromanpro/src/main/resources/templates/form-update-developer.html
+++ b/manpromanpro/src/main/resources/templates/form-update-developer.html
@@ -38,7 +38,7 @@
                         </div>
                         <div class="text-center">
                             <button type="submit" class="btn btn-primary">Update</button>
-                            <a class="btn btn-secondary" th:href="@{/developer/viewall}">Kembali</a>
+                            <a class="btn btn-primary" th:href="@{/developer/viewall}">Kembali</a>
                         </div>
                     </form>
                 </div>
