--- a/manpromanpro/src/main/resources/templates/fragments/navbar.html
+++ b/manpromanpro/src/main/resources/templates/fragments/navbar.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-  <nav th:fragment="navbar" class="navbar navbar-expand-lg bg-light">
+  <nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand fw-bold text-primary">ManproManpro</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -16,16 +16,25 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" th:href="@{/}">Beranda</a>
+            <a th:classappend="${page == 'beranda' ? 'active fw-bold' : ''}" class="nav-link" href="/">
+              Beranda
+            </a>
           </li>
-          <li class="nav-item"></li>
-            <a class="nav-link" th:href="@{/pekerja/viewall}">Pekerja</a>
+          <li class="nav-item">
+            <a th:classappend="${page == 'pekerja' ? 'active fw-bold' : ''}" class="nav-link" href="/pekerja/viewall">
+              Pekerja
+            </a>
           </li>
-          <li class="nav-item"></li>
-            <a class="nav-link" th:href="@{/developer/viewall}">Developer</a>
+          <li class="nav-item">
+            <a th:classappend="${page == 'developer' ? 'active fw-bold' : ''}" class="nav-link"
+              href="/developer/viewall">
+              Developer
+            </a>
           </li>
-          <li class="nav-item"></li>
-            <a class="nav-link" th:href="@{/proyek/viewall}">Proyek</a>
+          <li class="nav-item">
+            <a th:classappend="${page == 'proyek' ? 'active fw-bold' : ''}" class="nav-link" href="/proyek/viewall">
+              Proyek
+            </a>
           </li>
         </ul>
       </div>
