feat: tutorial 5 - reroute url to rest

--- a/manpromanpro/src/main/resources/templates/fragments/navbar.html
+++ b/manpromanpro/src/main/resources/templates/fragments/navbar.html
@@ -21,7 +21,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a th:classappend="${page == 'pekerja' ? 'active fw-bold' : ''}" class="nav-link" href="/pekerja/viewall">
+            <a th:classappend="${page == 'pekerja' ? 'active fw-bold' : ''}" class="nav-link" href="/pekerja/rest/viewall">
               Pekerja
             </a>
           </li>
