--- a/manpromanpro/src/main/resources/templates/response-error-rest.html
+++ b/manpromanpro/src/main/resources/templates/response-error-rest.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <object th:include="~{fragments/common :: js}" th:remove="tag "></object>
     <object th:include="~{fragments/common :: css}" th:remove="tag "></object>
-    <title>Success Pekerja</title>
+    <title>Error</title>
 </head>
 
 <body>
@@ -14,14 +14,15 @@
         <div class="card m-4 p-4">
             <div class="card-body">
                 <div class="text-center">
-                    <h2 th:text="${responseMessage}"></h2>
+                    <h2 style="color: red;">Aksi Gagal</h2>
                 </div>
-                <div class="text-center m-3">
-                    <a type="button" class="btn btn-md btn-primary" href="/">Home</a>
-                    <a type="button" class="btn btn-md btn-primary" href="/pekerja/rest/viewall">Lihat Semua Pekerja</a>
-                </div>
+                <h3 th:text="${errorMessage}"></h3>
+            </div>
+            <div class="text-center m-3">
+                <a type="button" class="btn btn-md btn-primary" href="/">Home</a>
             </div>
         </div>
+    </div>
     </div>
 </body>
 
