--- a/manpromanpro/src/main/resources/templates/fragments/common.html
+++ b/manpromanpro/src/main/resources/templates/fragments/common.html
@@ -6,10 +6,15 @@
     <title>Home</title>
 
     <head th:fragment="css">
+        <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.css" />
         <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
     </head>
 
     <head th:fragment="js">
+        <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+            integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+        <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.js"></script>
+
         <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
         <script src="https://code.jquery.com/jquery-3.7.1.min.js"
             integrity="sha256-/JqT3SQfawRcv/BlHPThkBvs0OEvtFFmqPF/LYI/Cxo=" crossorigin="anonymous"></script>
