--- a/manpromanpro/src/main/resources/templates/success-delete-pekerja.html
+++ b/manpromanpro/src/main/resources/templates/success-delete-pekerja.html
@@ -17,7 +17,7 @@
                 </div>
                 <div class="text-center m-3">
                     <a type="button" class="btn btn-md btn-primary" href="/">Home</a>
-                    <a type="button" class="btn btn-md btn-primary" href="/pekerja/viewall">Lihat Semua Pekerja</a>
+                    <a type="button" class="btn btn-md btn-primary" href="/pekerja/rest/viewall">Lihat Semua Pekerja</a>
                     <a type="button" class="btn btn-md btn-primary" href="/proyek/viewall">Lihat Semua Proyek</a>
                     <a type="button" class="btn btn-md btn-primary" href="/developer/viewall">Lihat Semua Developer</a>
                 </div>
