--- a/manpromanpro/src/main/resources/templates/home.html
+++ b/manpromanpro/src/main/resources/templates/home.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://thymeleaf.org">
- 
+
 <head>
   <meta charset="UTF-8">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
+  <object th:include="~{fragments/common :: js}" th:remove="tag"></object>
+  <object th:include="~{fragments/common :: css}" th:remove="tag"></object>
   <title>Home</title>
 </head>
- 
+
 <body>
+  <nav th:replace="~{fragments/navbar :: navbar}"></nav>
   <div class="container text-center">
     <div class="row pt-5 pb-2">
       <h1>
@@ -22,6 +22,7 @@
       <div class="col">
         <a type="button" class="btn btn-primary m-2" href="/proyek/add">Tambah Proyek</a>
         <a type="button" class="btn btn-primary m-2" href="/proyek/viewall">Lihat Semua Proyek</a>
+        <a type="button" class="btn btn-primary m-2" href="/proyek/datatable">Lihat Datatable Proyek</a>
       </div>
     </div>
     <div class="row">
@@ -30,7 +31,14 @@
         <a type="button" class="btn btn-primary m-2" href="/developer/viewall">Lihat Semua Developer</a>
       </div>
     </div>
+    <div class="row">
+      <div class="col">
+        <a type="button" class="btn btn-primary m-2" href="/pekerja/add">Tambah Pekerja</a>
+        <a type="button" class="btn btn-primary m-2" href="/pekerja/viewall">Lihat Semua Pekerja</a>
+      </div>
+    </div>
   </div>
+  
 </body>
- 
+
 </html>
