feat: tutorial 8 - add login logout, and jwt auth

--- a/manpromanpro/src/main/resources/templates/fragments/navbar.html
+++ b/manpromanpro/src/main/resources/templates/fragments/navbar.html
@@ -37,6 +37,9 @@
             </a>
           </li>
         </ul>
+        <ul class="navbar-nav pull-right">
+          <a class="nav-item nav-link" th:href="@{/logout}">Logout</a>
+        </ul>
       </div>
     </div>
   </nav>
